k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uku_gitops
  name: uku_gitops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uku_gitops
  template:
    metadata:
      labels:
        app: uku_gitops
    spec:
      containers:
        - image: uku_gitops
          name: uku_gitops
          ports:
            - name: http
              containerPort: 8050
