k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uku_gitops
  name: uku_gitops
spec:
  ports:
    - name: http
      port: 8050
      targetPort: http
  selector:
    app: uku_gitops
  type: ClusterIP
